--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;1,300;1,400;1,500&display=swap');
+
+
 :root {
 	--nav-size : 40px;
 }
@@ -7,10 +10,12 @@ html {
 }
 
 body {
+	font-family: Verdana, sans-serif;
 	margin: 0;
 	height: 100vh;
 	background-color: #FAACA8;
 	background-image: linear-gradient(19deg, #FAACA8 0%, #DDD6F3 100%);
+	transition: 1s ease;
 }
 
 nav {
@@ -18,9 +23,7 @@ nav {
 	top: 0;
 	position: absolute;
 	height: var(--nav-size);
-	display: flex;
-	justify-content: center;
-	align-items: center;
+	flex-direction: row !important;
 }
 
 main {
@@ -36,13 +39,23 @@ main {
 }
 
 .weather {
-	width: 300px;
-	height: 300px;
 	background-color: rgba(255,255,255,0.5);
 	border-radius: 4px;
+	padding: 30px 50px;
 
 }
 
-.current-temp {
+.text-top-weather {
+	font-family: 'Roboto', sans-serif;
 	font-size: 3rem;
+	margin-bottom: 5px;
+}
+
+.not-found {
+	max-width: 150px;
+}
+
+.error {
+	color: red;
+	font-weight: 400;
 }
