--- a/src/style.css
+++ b/src/style.css
@@ -1,12 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;1,300;1,400;1,500&display=swap');
 
-
 :root {
 	--nav-size : 40px;
-}
-
-html {
-	scroll-padding-top: var(--nav-size);
 }
 
 body {
@@ -15,7 +10,7 @@ body {
 	height: 100vh;
 	background-color: #FAACA8;
 	background-image: linear-gradient(19deg, #FAACA8 0%, #DDD6F3 100%);
-	transition: 1s ease;
+	transition: all 5s linear ;
 }
 
 nav {
@@ -38,6 +33,17 @@ main {
 	flex-direction: column;
 }
 
+.nav-items {
+	margin-top: 8px;
+	margin-right: 3px;
+	padding: 8px;
+	border: 1px solid black;
+	border-radius: 4px;
+	outline: none;
+	background: rgba(255, 255, 255, 0.3);
+	font-size: 0.8rem;
+}
+
 .weather {
 	background-color: rgba(255,255,255,0.5);
 	border-radius: 4px;
@@ -58,4 +64,26 @@ main {
 .error {
 	color: red;
 	font-weight: 400;
+}
+
+.Drizzle {
+	background-color: #85FFBD;
+	background-image: linear-gradient(45deg, #85FFBD 0%, #FFFB7D 100%);
+	opacity: 1;
+}
+
+
+.background {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	background-image: linear-gradient(19deg, #FAACA8 0%, #DDD6F3 100%);
+	transition: all 200ms linear ;	
+	opacity: 0;
+}
+.foreground {
+	background-image: linear-gradient(45deg, #85FFBD 0%, #FFFB7D 100%) !important;
+	opacity: 1;
+	z-index: -1;
+
 }
