--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;1,300;1,400;1,500&display=swap');
 
 :root {
-	--nav-size : 40px;
+	--nav-size: 40px;
+	--bg-gradient: linear-gradient(45deg, #85FFBD 0%, #FFFB7D 100%);
+	--bg-opacity: 1;
 }
 
 body {
@@ -66,24 +68,17 @@ main {
 	font-weight: 400;
 }
 
-.Drizzle {
-	background-color: #85FFBD;
-	background-image: linear-gradient(45deg, #85FFBD 0%, #FFFB7D 100%);
-	opacity: 1;
-}
-
-
 .background {
 	position: absolute;
 	width: 100%;
 	height: 100%;
 	background-image: linear-gradient(19deg, #FAACA8 0%, #DDD6F3 100%);
-	transition: all 200ms linear ;	
+	transition: all 200ms linear;
 	opacity: 0;
-}
-.foreground {
-	background-image: linear-gradient(45deg, #85FFBD 0%, #FFFB7D 100%) !important;
-	opacity: 1;
 	z-index: -1;
+}
 
+.foreground {
+	background-image: var(--bg-gradient);
+	opacity: var(--bg-opacity);
 }
