--- a/src/style.css
+++ b/src/style.css
@@ -71,7 +71,7 @@ main {
 	position: absolute;
 	width: 100%;
 	height: 100%;
-	background-image: linear-gradient(19deg, #FAACA8 0%, #DDD6F3 100%);
+	background: linear-gradient(19deg, #FAACA8 0%, #DDD6F3 100%);
 	transition: all 1s linear;
 	opacity: 0;
 	z-index: -1;
